--- a/index.html
+++ b/index.html
@@ -14,23 +14,24 @@
             <img src="images/ocean.jpg" alt="Ocean" />
             <div class="fc_text">
                 <hr/>
-                <h1>Enjoy Being Alone</h1>
+                <h1>Enjoy Being <span class="redText">Alone</span></h1>
                 <hr/>
             </div>
         </div>
         <div class="second_container">
             <img src="images/spa.jpg" alt="Spa" />
-            <h1 id="br_1">It is our choices,</h1>
-            <h1 id="br_2">Increased  happiness,</h1>
-            <h1 id="br_3">Supprts weight loss, </h1>
-            <h1 id="br_4">Helps to de-stress</h1>
+            <h1 id="br_1">Spa is your way -</h1>
+            <h1 id="br_2">to increased  happiness,</h1>
+            <h1 id="br_3">to supprt weight loss, </h1>
+            <h1 id="br_4">to de-stress</h1>
         </div>
         <div class="third_container">
             <img src="images/hugs.jpg" alt="Hugs" />
-            <h1>boost your heart health
-            <br/>ward off illness
-            <br/>release oxytocin
-            <br/>cut down on stress</h1>
+            <h1>Hugs will help you:
+            <br/>boost your heart health,
+            <br/>ward off illness,
+            <br/>release oxytocin,
+            <br/>cut down on stress :)</h1>
         </div>
     </body>
 </html>
