--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!--Connecting all the fonts I am using-->
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Anton&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <div class="first_container">
